Fixed aligning banner images in IE/Edge

--- a/kasimi/mchatonlinebanners/styles/all/theme/mchat.onlinebanners.css
+++ b/kasimi/mchatonlinebanners/styles/all/theme/mchat.onlinebanners.css
@@ -11,20 +11,6 @@
 	position: relative;
 }
 
-.mchat-message-header {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	white-space: pre;
-}
-
-.mchat-message[data-mchat-banner] .username,
-.mchat-message[data-mchat-banner] .username-coloured {
-	display: flex !important;
-	justify-content: center;
-	align-items: center;
-}
-
 .mchat-message[data-mchat-banner] .username::before,
 .mchat-message[data-mchat-banner] .username-coloured::before {
 	font-family: FontAwesome;
